--- a/gulp/theme/assets/css/main.css
+++ b/gulp/theme/assets/css/main.css
@@ -183,7 +183,7 @@ th {
     min-width: 1024px;
 }
 
-#main { width: 754px; }
+#main { width: calc(100% - 310px); }
 #sidebar { width: 270px; margin: 0 15px; }
 
 .content { padding: 0 20px 0 25px; }
